[metadata]
name = sammen
version = 0.0.1
description = Dansk for together - multiple watch to ensure special events come together or go away.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sthagen/sammen
author = Stefan Hagen
author_email = stefan@hagen.link

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6.13
install_requires =
    watchgod>=0.7
packages = find:

[options.extras_require]
dev =
    black
    coverage
    flake8
    mypy
    pylint
    pytest
    pytest-cov
    pytest-flake8

[bdist_wheel]
universal = True


[tool:pytest]
testpaths = tests
filterwarnings = error

[flake8]
max-line-length = 120
max-complexity = 12
inline-quotes = '
multiline-quotes = """
ignore = E203, W503

[coverage:run]
branch = True

[coverage:report]
precision = 2
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if TYPE_CHECKING:
    @overload
omit =
    # __main__.py is trivial and hard to test properly
    */__main__.py

[isort]
line_length=120
known_first_party=watchgod
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True

[mypy]
strict = True
