[metadata]
author = Stefan Hagen
author_email = stefan@hagen.link
description = Dansk for together - multiple watch to ensure special events come together or go away.
home_page = https://git.sr.ht/~sthagen/sammen

keywords =
    developer-tools

long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Stefan Hagen
maintainer_email = stefan@hagen.link
name = sammen

project_urls =
    Bug Tracker = https://todo.sr.ht/~sthagen/sammen
    Documentation = https://codes.dilettant.life/docs/sammen
    Source Code = https://git.sr.ht/~sthagen/sammen

url = https://git.sr.ht/~sthagen/sammen
version = 2022.7.24

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.8.13
install_requires =
    watchfiles >= 0.16.1
packages = find:

[options.extras_require]
dev =
    black
    coverage
    flake8
    mypy
    pytest
    pytest-cov
    pytest-flake8

[bdist_wheel]
universal = True


[tool:pytest]
testpaths = test
filterwarnings = error

[flake8]
max-line-length = 120
max-complexity = 12
inline-quotes = '
multiline-quotes = """
ignore = E203, W503

[coverage:run]
branch = True

[coverage:report]
precision = 2
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if TYPE_CHECKING:
    @overload
omit =
    # __main__.py is trivial and hard to test properly
    */__main__.py

[isort]
line_length=120
known_first_party=sammen
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True

[mypy]
strict = True
